src-tauri/abilities-runtime/tests/trybuild/boundary/rusqlite_unavailable.rs
use rusqlite::Connection;

fn main() {
    let _ = Connection::open_in_memory();
}
